tests/jsr335/Semantics/LambdaExpressions/ReservedKeyword/ShouldFail/syntax11/Test.java


public class Test {
	int _ = 5;
	
	public static void main(String[] args) {
		
    }
	
	
}